fixed tic tac toe on mobile

--- a/apps/tic-tac-toe/style.css
+++ b/apps/tic-tac-toe/style.css
@@ -1,3 +1,7 @@
+.mainContent {
+	margin: 0 auto;
+}
+
 .valign {
 display: flex;
 align-items: center;
